--- a/app/components/heroSection.module.css
+++ b/app/components/heroSection.module.css
@@ -4,7 +4,7 @@
 }
 
 .heroBg {
-  background-color: rgb(249, 247, 252);
+  background-color: rgba(230, 226, 238, 0.726);
   display: flex;
   justify-content: center;
   border-radius: 10px;
@@ -224,12 +224,12 @@
   }
 
   .heroSection h1 {
-    font-size: 3.8vw;
+    font-size: 3.5vw;
   }
 
   .heroLeft {
-    padding: 50px 0 0 0;
-    margin: 15vh 0 0 0;
+    padding: 40px 0 0 0;
+    margin: 20vh 0 0 0;
   }
 
   .heroSocials {
@@ -238,7 +238,6 @@
   }
 
   .heroImage {
-    width: 39vw;
-    padding: 50px 0 50px 0;
+    padding: 0 0 50px 0;
   }
 }
