--- a/app/components/navBar.module.css
+++ b/app/components/navBar.module.css
@@ -12,6 +12,7 @@
   width: 100%;
   justify-content: space-between;
   padding: 20px 80px 20px 80px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.101), 0 6px 20px 0 rgba(0, 0, 0, 0.14);
 }
 
 .navLinks {
