--- a/app/components/mobileNav.module.css
+++ b/app/components/mobileNav.module.css
@@ -1,3 +1,21 @@
-.mobileNav{
-    
+.mobileNav {
+  position: fixed;
+  background-color: white;
+  width: 100%;
+  padding: 20px 14px 20px 14px;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 300ms;
 }
+
+.mobileScrollNav {
+  justify-content: space-between;
+  padding: 14px 10px 14px 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.101), 0 6px 20px 0 rgba(0, 0, 0, 0.14);
+}
+
+
+@media (min-width: 768px) { 
+    .mobileNav{
+      display: none;
+    }
+ }
