--- a/app/globals.css
+++ b/app/globals.css
@@ -13,11 +13,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-}
-
-body {
-
-  background-color: white ;
+  background-color: rgb(184,30,148);
 }
 
 a {
