--- a/app/components/navBar.module.css
+++ b/app/components/navBar.module.css
@@ -28,7 +28,7 @@
     cursor: pointer;
     position: relative;
     white-space: nowrap;
-    color: #9e2283;
+    color: #761b60;
 }
 
 .Links::before,
