--- a/app/globals.css
+++ b/app/globals.css
@@ -13,7 +13,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  background-color: rgb(184,30,148);
+  background-color: rgb(199, 56, 165);
 }
 
 a {
