--- a/app/components/navBar.module.css
+++ b/app/components/navBar.module.css
@@ -7,7 +7,6 @@
   background-color: white;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 300ms;
-  
 }
 .scrollNav {
   width: 100%;
@@ -16,60 +15,60 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.101), 0 6px 20px 0 rgba(0, 0, 0, 0.14);
 }
 
-.navLinks { 
+.navLinks {
   display: flex;
   gap: 40px;
   font-size: large;
   font-weight: 800;
+  color: #761b60;
   font-family: var(--font-quicksand);
 }
 
 .Links {
-    cursor: pointer;
-    position: relative;
-    white-space: nowrap;
-    color: #761b60;
+  cursor: pointer;
+  position: relative;
+  white-space: nowrap;
 }
 
 .Links::before,
 .Links::after {
-    position: absolute;
-    width: 100%;
-    height: 1px;
-    background: currentColor;
-    top: 100%;
-    left: 0;
-    pointer-events: none;
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  background: currentColor;
+  top: 100%;
+  left: 0;
+  pointer-events: none;
 }
 
 .Links::before {
-    content: '';
-    /* show by default */
+  content: "";
+  /* show by default */
 }
 .Links::before {
-    transform-origin: 100% 50%;
-    transform: scale3d(0, 1, 1);
-    transition: transform 0.3s cubic-bezier(0.7, 0, 0.2, 1);
+  transform-origin: 100% 50%;
+  transform: scale3d(0, 1, 1);
+  transition: transform 0.3s cubic-bezier(0.7, 0, 0.2, 1);
 }
 
 .Links:hover::before {
-    transform-origin: 0% 50%;
-    transform: scale3d(1, 1, 1);
-    transition-timing-function: cubic-bezier(0.4, 1, 0.8, 1);
+  transform-origin: 0% 50%;
+  transform: scale3d(1, 1, 1);
+  transition-timing-function: cubic-bezier(0.4, 1, 0.8, 1);
 }
 
 .Links::after {
-    content: '';
-    top: calc(100% + 4px);
-    transform-origin: 0% 50%;
-    transform: scale3d(0, 1, 1);
-    transition: transform 0.3s cubic-bezier(0.7, 0, 0.2, 1);
+  content: "";
+  top: calc(100% + 4px);
+  transform-origin: 0% 50%;
+  transform: scale3d(0, 1, 1);
+  transition: transform 0.3s cubic-bezier(0.7, 0, 0.2, 1);
 }
 
 .Links:hover::after {
-    transform-origin: 100% 50%;
-    transform: scale3d(1, 1, 1);
-    transition-timing-function: cubic-bezier(0.4, 1, 0.8, 1);
+  transform-origin: 100% 50%;
+  transform: scale3d(1, 1, 1);
+  transition-timing-function: cubic-bezier(0.4, 1, 0.8, 1);
 }
 
 @media (max-width: 768px) {
