--- a/app/components/mobileNav.module.css
+++ b/app/components/mobileNav.module.css
@@ -4,7 +4,7 @@
   background-color: white;
   width: 100%;
   justify-content: space-between;
-  padding: 15px 30px 15px 10px;
+  padding: 18px 30px 18px 10px;
   box-shadow: 0 0px 8px 0 rgba(211, 210, 210, 0.493), 0 6px 20px 0 rgba(193, 190, 190, 0.572);
 }
 
@@ -13,7 +13,10 @@
   gap: 10px;
   height: 10vh;
   width: fit-content;
+   margin-left: auto;
+  margin-right: auto;
 }
+
 
 @media (min-width: 1024px) {
   .mobileNav {
