--- a/app/components/mobileNav.module.css
+++ b/app/components/mobileNav.module.css
@@ -5,7 +5,8 @@
   width: 100%;
   justify-content: space-between;
   padding: 18px 30px 18px 10px;
-  box-shadow: 0 0px 8px 0 rgba(211, 210, 210, 0.493), 0 6px 20px 0 rgba(193, 190, 190, 0.572);
+  box-shadow: 0 0px 8px 0 rgba(211, 210, 210, 0.493),
+    0 6px 20px 0 rgba(193, 190, 190, 0.572);
 }
 
 .heroSocials {
@@ -13,9 +14,7 @@
   gap: 10px;
   height: 10vh;
   width: fit-content;
-  
 }
-
 
 @media (min-width: 1024px) {
   .mobileNav {
