--- a/app/components/services.module.css
+++ b/app/components/services.module.css
@@ -1,5 +1,105 @@
-.servicesIntro{
-    display: flex;
-    justify-content: center;
-    background-image: url("/");
+.services {
+  background-color: white;
+}
+.serviceIntro {
+  display: grid;
+  justify-content: center;
+  justify-items: center;
+  text-align: center;
+}
+
+.serviceIntro h1 {
+  font-weight: 900;
+  line-height: normal;
+  color: #761b60;
+  font-family: var(--font-space_grotesk);
+}
+
+.serviceIntro p {
+  font-weight: 500;
+  line-height: normal;
+  color: #4b494b;
+  font-family: var(--font-space_grotesk);
+}
+
+.servicesList {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  text-align: center;
+  gap: 60px;
+  margin: 0 auto;
+  padding: 50px 0 50px 0;
+}
+
+.servicesListGrid {
+  display: grid;
+  justify-items: center;
+  max-width: 300px;
+  gap: 15px;
+}
+
+.servicesListGrid h1 {
+  font-size: large;
+  font-weight: 500;
+  font-family: var(--font-space_grotesk);
+}
+
+.servicesListGrid p {
+  font-weight: 500;
+  font-family: var(--font-space_grotesk);
+}
+
+/* >>>>>> RESPONSIVE DESIGN TO 373px SCREEN DOWN <<<<<<    */
+@media (max-width: 373px) {
+   .serviceIntro h1 {
+    font-size: 2.2em;
+    padding: 30px 0 10px 0;
+  }
+  
+  .serviceIntro p {
+    font-size: 0.8em;
+    padding: 0 5px 0 5px;
+  }
+
+}
+
+/* >>>>>> RESPONSIVE DESIGN 374px GOING UP 425px <<<<<<    */
+@media (min-width: 374px) {
+   .serviceIntro h1 {
+    font-size: 2.7em;
+    padding: 30px 0 10px 0;
+  }
+}
+
+/* >>>>>> RESPONSIVE DESIGN 425px UP TO 768px <<<<<<    */
+@media (min-width: 425px) {
+}
+
+/* >>>>>> RESPONSIVE DESIGN 768px UP TO 1024px <<<<<<    */
+@media (min-width: 768px) {
+}
+
+/* >>>>>> RESPONSIVE DESIGN 1024px UP TO 1440px <<<<<<    */
+@media (min-width: 1024px) {
+}
+
+/* >>>>>> RESPONSIVE DESIGN 1440px <<<<<<    */
+@media (min-width: 1440px) {
+  .serviceIntro {
+    padding: 50px 0 30px 0;
+  }
+
+  .serviceIntro h1 {
+    font-size: 3.5em;
+    padding: 0 0 10px 0;
+  }
+
+  .serviceIntro p {
+    font-size: 1.1em;
+    width: 35vw;
+  }
+  .servicesList {
+    max-width: 80vw;
+  }
 }
