--- a/app/components/services.module.css
+++ b/app/components/services.module.css
@@ -58,7 +58,7 @@
   }
   
   .serviceIntro p {
-    font-size: 0.8em;
+    font-size: 0.9em;
     padding: 0 5px 0 5px;
   }
 
@@ -69,6 +69,11 @@
    .serviceIntro h1 {
     font-size: 2.7em;
     padding: 30px 0 10px 0;
+  }
+  
+  .serviceIntro p {
+    font-size: 0.9em;
+    padding: 0 5px 0 5px;
   }
 }
 
