--- a/app/components/mobileNavMenu.css
+++ b/app/components/mobileNavMenu.css
@@ -27,22 +27,10 @@
   gap: 50px;
   border-top: 2px solid #f4eded9c;
 }
-ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
 
-li {
-  padding: 10px;
-  white-space: nowrap;
-  color: #761b60;
-  margin-bottom: 5px;
-  font-size: large;
-  font-weight: 800;
-  font-family: var(--font-quicksand);
-}
+/*
 
+*/
 @media (min-width: 1024px) {
   .menu.show {
     display: none;
