--- a/app/components/business.module.css
+++ b/app/components/business.module.css
@@ -1,53 +1,48 @@
 .business {
   display: flex;
   flex-wrap: wrap;
-  gap: 100px;
   justify-content: center;
-  background-color: white;
-  padding: 100px 0 100px 0;
-  margin: 0 auto;
+  background-color: rgb(245, 245, 245);
 }
 
 .businessContext {
   display: grid;
-  max-width: 30vw;
-  height: 50vh;
-  padding: 70px 0 0 0;
-  line-height: 2;
 }
 
 .intro {
+  display: none;
   background-color: rgb(233, 238, 244);
   font-family: var(--font-space_grotesk);
   font-weight: 500;
   color: #4b494b;
   border-radius: 20px;
-  padding: 0 0 0 10px;
-  width: 14vw;
-  height: 4.5vh;
 }
+
+.introMobile {
+  display: none;
+  background-color: rgb(233, 238, 244);
+  font-family: var(--font-space_grotesk);
+  font-weight: 500;
+  color: #4b494b;
+  border-radius: 20px;
+}
+
 .heading {
-  font-size: 2em;
   font-weight: 900;
   font-family: var(--font-space_grotesk);
   line-height: normal;
   color: #761b60;
-  padding: 20px 0 20px 0;
 }
 
 .businessContext p {
   font-weight: 500;
-  font-size: 1em;
-  padding: 0 0 20px 0;
+  color: #4b494b;
   font-family: var(--font-space_grotesk);
 }
+
 .btn button {
-  font-size: 1em;
-  width: 14.5vw;
   background-color: rgb(184, 30, 148);
   color: white;
-  padding: 5px;
-  border-radius: 30px;
   font-family: var(--font-space_grotesk);
 }
 
@@ -58,30 +53,303 @@
 
 /* >>>>>> RESPONSIVE DESIGN TO 373px SCREEN DOWN <<<<<<    */
 @media (max-width: 373px) {
+  .business {
+    padding: 40px 10px 100px 10px;
+    margin: 0 auto;
+    background-color: rgb(245, 245, 245);
+  }
 
- }
+  .businessContext {
+    max-width: 100vw;
+    display: grid;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .introMobile {
+    display: inline-block;
+    margin: 20px 0 20px 0;
+    padding: 5px 0 5px 0;
+    width: 90vw;
+    text-align: center;
+    font-size: 1em;
+  }
+
+  .intro {
+    display: none;
+  }
+
+  .heading {
+    font-size: 1.6em;
+    padding: 20px 0 20px 0;
+  }
+
+  .businessContext p {
+    font-size: 0.9em;
+    line-height: 2;
+    padding: 20px 0 20px 0;
+  }
+
+  .btn {
+    padding: 20px 0 20px 0;
+  }
+
+  .btn button {
+    padding: 5px;
+    width: 90vw;
+    border-radius: 30px;
+    font-size: 1em;
+    background-color: rgb(139, 70, 123);
+  }
+}
 
 /* >>>>>> RESPONSIVE DESIGN 374px GOING UP 425px <<<<<<    */
 @media (min-width: 374px) {
+  .business {
+    padding: 40px 10px 100px 10px;
+    margin: 0 auto;
+    background-color: rgb(245, 245, 245);
+  }
 
- }
+  .businessContext {
+    max-width: 100vw;
+    display: grid;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .introMobile {
+    display: inline-block;
+    margin: 20px 0 20px 0;
+    padding: 5px 0 5px 0;
+    width: 90vw;
+    text-align: center;
+    font-size: 1em;
+  }
+
+  .intro {
+    display: none;
+  }
+
+  .heading {
+    font-size: 1.9em;
+    padding: 20px 0 20px 0;
+  }
+
+  .businessContext p {
+    font-size: 1em;
+    line-height: 2;
+    padding: 20px 0 20px 0;
+  }
+
+  .btn {
+    padding: 20px 0 20px 0;
+  }
+
+  .btn button {
+    padding: 5px;
+    width: 90vw;
+    border-radius: 30px;
+    font-size: 1em;
+    background-color: rgb(139, 70, 123);
+  }
+}
 
 /* >>>>>> RESPONSIVE DESIGN 425px UP TO 768px <<<<<<    */
 @media (min-width: 425px) {
+  .business {
+    padding: 40px 10px 100px 10px;
+    margin: 0 auto;
+    background-color: rgb(245, 245, 245);
+  }
 
+  .businessContext {
+    max-width: 100vw;
+    display: grid;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .introMobile {
+    display: inline-block;
+    margin: 20px 0 20px 0;
+    padding: 5px 0 5px 0;
+    width: 90vw;
+    text-align: center;
+    font-size: 1em;
+  }
+
+  .intro {
+    display: none;
+  }
+
+  .heading {
+    font-size: 2em;
+    padding: 20px 0 20px 0;
+  }
+
+  .businessContext p {
+    font-size: 1em;
+    line-height: 2;
+    padding: 20px 0 20px 0;
+  }
+
+  .btn {
+    padding: 20px 0 20px 0;
+  }
+
+  .btn button {
+    padding: 5px;
+    width: 90vw;
+    border-radius: 30px;
+    font-size: 1em;
+    background-color: rgb(139, 70, 123);
+  }
 }
 
 /* >>>>>> RESPONSIVE DESIGN 768px UP TO 1024px <<<<<<    */
 @media (min-width: 768px) {
-
+  .business {
+    padding: 40px 10px 100px 10px;
+    margin: 0 auto;
+    background-color: rgb(245, 245, 245);
   }
+
+  .businessContext {
+    max-width: 100vw;
+    display: grid;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .introMobile {
+    display: inline-block;
+    margin: 20px 0 20px 0;
+    padding: 5px 0 5px 0;
+    width: 50vw;
+    text-align: center;
+    font-size: 1em;
+  }
+
+  .intro {
+    display: none;
+  }
+
+  .heading {
+    font-size: 2em;
+    padding: 20px 0 20px 0;
+  }
+
+  .businessContext p {
+    font-size: 1.2em;
+    line-height: 2;
+    padding: 20px 0 20px 0;
+  }
+
+  .btn {
+    padding: 20px 0 20px 0;
+  }
+
+  .btn button {
+    padding: 5px;
+    width: 50vw;
+    border-radius: 30px;
+    font-size: 1em;
+    background-color: rgb(139, 70, 123);
+  }
+}
 
 /* >>>>>> RESPONSIVE DESIGN 1024px UP TO 1440px <<<<<<    */
 @media (min-width: 1024px) {
+  .business {
+    padding: 40px 10px 100px 10px;
+    margin: 0 auto;
+    background-color: rgb(245, 245, 245);
+  }
 
- }
+  .businessContext {
+    max-width: 100vw;
+    display: grid;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .introMobile {
+    display: inline-block;
+    margin: 20px 0 20px 0;
+    padding: 5px 0 5px 0;
+    width: 50vw;
+    text-align: center;
+    font-size: 1em;
+  }
+
+  .intro {
+    display: none;
+  }
+
+  .heading {
+    font-size: 2em;
+    padding: 20px 0 20px 0;
+  }
+
+  .businessContext p {
+    font-size: 1.3em;
+    line-height: 2;
+    padding: 20px 0 20px 0;
+  }
+
+  .btn {
+    padding: 20px 0 20px 0;
+  }
+
+  .btn button {
+    padding: 5px;
+    width: 50vw;
+    border-radius: 30px;
+    font-size: 1em;
+    background-color: rgb(139, 70, 123);
+  }
+}
 
 /* >>>>>> RESPONSIVE DESIGN 1440px <<<<<<    */
 @media (min-width: 1440px) {
+  .business {
+    padding: 100px 0 100px 0;
+    gap: 100px;
+  }
 
- }
+  .businessContext {
+    max-width: 30vw;
+    height: 50vh;
+    padding: 70px 0 0 0;
+    text-align: start;
+  }
+
+  .intro {
+    display: inline-block;
+    padding: 5px 0 5px 20px;
+    width: 16vw;
+    font-size: 1em;
+  }
+
+  .introMobile {
+    display: none;
+  }
+
+  .heading {
+    padding: 20px 0 20px 0;
+    font-size: 2em;
+  }
+
+  .businessContext p {
+    font-size: 1em;
+    padding: 0 0 20px 0;
+  }
+
+  .btn button {
+    padding: 5px;
+    width: 14.5vw;
+    border-radius: 30px;
+    font-size: 1em;
+  }
+}
