--- a/app/components/business.module.css
+++ b/app/components/business.module.css
@@ -95,7 +95,7 @@
   }
 
   .btn button {
-    padding: 5px;
+    padding: 10px 0 10px 0;
     width: 90vw;
     border-radius: 30px;
     font-size: 1em;
@@ -147,7 +147,7 @@
   }
 
   .btn button {
-    padding: 5px;
+    padding: 10px 0 10px 0;
     width: 90vw;
     border-radius: 30px;
     font-size: 1em;
@@ -199,7 +199,7 @@
   }
 
   .btn button {
-    padding: 5px;
+    padding: 10px 0 10px 0;
     width: 90vw;
     border-radius: 30px;
     font-size: 1em;
@@ -251,7 +251,7 @@
   }
 
   .btn button {
-    padding: 5px;
+    padding: 10px 0 10px 0;
     width: 50vw;
     border-radius: 30px;
     font-size: 1em;
@@ -303,7 +303,7 @@
   }
 
   .btn button {
-    padding: 5px;
+    padding: 10px 0 10px 0;
     width: 50vw;
     border-radius: 30px;
     font-size: 1em;
@@ -347,7 +347,7 @@
   }
 
   .btn button {
-    padding: 5px;
+    padding: 10px 0 10px 0;
     width: 14.5vw;
     border-radius: 30px;
     font-size: 1em;
