--- a/app/components/mobileNav.module.css
+++ b/app/components/mobileNav.module.css
@@ -26,7 +26,7 @@
   gap: 40px;
   font-size: medium;
   font-weight: 600;
-  color: #761b60;
+  color: rgb(184,30,148);
   font-family: var(--font-montserrat);
 }
 
