--- a/app/components/downloadApp.module.css
+++ b/app/components/downloadApp.module.css
@@ -40,3 +40,54 @@
   margin: 0 0 0 0;
   padding: 50px 0 50px 0;
 }
+
+@media (max-width: 1023px) {
+
+.downloadImg{
+  display: none;
+}
+
+.downloadApp {
+  margin: 0px 0px 0px 0px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  background-color: rgb(184, 30, 148);
+  border-radius: 10px;
+  box-shadow: 0 4px 8px 0 rgba(157, 155, 155, 0.401),
+    0 6px 20px 0 rgba(183, 182, 182, 0.224);
+  position: absolute;
+  bottom: 800px;
+}
+
+.downloadAppContext {
+  padding: 80px 10px 10px 10px;
+  max-width: 100vw;
+}
+
+.downloadAppContext h1 {
+  font-weight: 900;
+  font-family: var(--font-space_grotesk);
+  line-height: normal;
+  color: white;
+  font-size: 2em;
+}
+
+.downloadAppContext p {
+  font-weight: 500;
+  color: white;
+  font-family: var(--font-space_grotesk);
+  font-size: 1em;
+  max-width: 100vw;
+  padding: 20px 0 0 0;
+}
+
+.heroSocials {
+  display: flex;
+  gap: 10px;
+  width: fit-content;
+  margin: 0 0 0 0;
+  padding: 50px 0 50px 0;
+}
+
+}
