--- a/app/components/footer.module.css
+++ b/app/components/footer.module.css
@@ -67,6 +67,7 @@
   .footerContext {
     max-width: 100vw;
     gap: 20vw;
+    justify-content: start;
   }
 
   .footerContext img {
@@ -111,6 +112,7 @@
   .footerContext {
     max-width: 100vw;
     gap: 25vw;
+    justify-content: start;
   }
 
   .footerContext img {
@@ -179,6 +181,46 @@
 
 /* >>>>>> RESPONSIVE DESIGN 768px UP TO 1024px <<<<<<    */
 @media (min-width: 768px) {
+  .footer {
+    padding: 400px 20px 50px 20px;
+    gap: 10vw;
+  }
+
+  .footer h1 {
+    padding: 0 0 20px 0;
+  }
+
+  .footerIntro {
+    max-width: 70vw;
+  }
+
+  .footerIntro p {
+    padding: 20px 0 20px 0;
+  }
+
+  .footerContext {
+    max-width: 100vw;
+    gap: 10vw;
+  }
+
+  .footerContext img {
+    padding: 0 0 20px 0;
+  }
+
+  .footerList ul li {
+    font-size: 0.9em;
+    max-width: 100vw;
+  }
+
+  .footerBottom {
+    padding: 30px 0 50px 0;
+  }
+
+  .footerBottom span {
+    text-align: center;
+    font-size: 0.8em;
+    max-width: 100vw;
+  }
 }
 
 /* >>>>>> RESPONSIVE DESIGN 1024px UP TO 1440px <<<<<<    */
