--- a/app/components/footer.module.css
+++ b/app/components/footer.module.css
@@ -49,7 +49,7 @@
 /* >>>>>> RESPONSIVE DESIGN TO 373px SCREEN DOWN <<<<<<    */
 @media (max-width: 373px) {
   .footer {
-    padding: 400px 20px 50px 20px;
+    padding: 200px 20px 50px 20px;
     gap: 20vw;
   }
 
@@ -112,7 +112,7 @@
 
   .footerContext {
     max-width: 100vw;
-    gap: 25vw;
+    gap: 20vw;
     justify-content: start;
   }
 
@@ -226,80 +226,88 @@
 
 /* >>>>>> RESPONSIVE DESIGN 1024px UP TO 1440px <<<<<<    */
 @media (min-width: 1024px) {
-}
+   .footer {
+    padding: 300px 20px 50px 20px;
+    gap: 10vw;
+  }
 
-/* >>>>>> RESPONSIVE DESIGN 1440px <<<<<<    */
-@media (min-width: 1440px) {
-  .footer {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    background-color: white;
-    padding: 400px 0 50px 0;
+  .footer h1 {
+    padding: 0 0 20px 0;
   }
 
   .footerIntro {
-    max-width: 30vw;
+    max-width: 60vw;
   }
 
   .footerIntro p {
-    padding: 20px 100px 20px 0;
+    padding: 20px 0 20px 0;
   }
 
   .footerContext {
-    display: flex;
-    gap: 100px;
+    max-width: 100vw;
+    gap: 10vw;
   }
 
-  .footerContext h1 {
-    font-weight: 900;
-    line-height: normal;
-    color: rgb(184, 30, 148);
-    font-family: var(--font-space_grotesk);
-    font-size: 1.3em;
-  }
   .footerContext img {
     padding: 0 0 20px 0;
   }
 
-  .footerContext p {
-    font-weight: 400;
-    line-height: 2;
-    color: #4b494b;
-    font-family: var(--font-space_grotesk);
-    font-size: 1em;
-    max-width: 30vw;
-  }
-
-  .footerList h1 {
-    padding: 0 0 20px 0;
-    font-family: var(--font-space_grotesk);
-  }
-
   .footerList ul li {
-    padding: 5px 0 5px 0;
     font-size: 0.9em;
-    color: rgb(47, 47, 47);
-    font-family: var(--font-space_grotesk);
-    max-width: 10vw;
-  }
-
-  .bg {
-    position: relative;
-    display: grid;
+    max-width: 100vw;
   }
 
   .footerBottom {
-    background-color: white;
     padding: 30px 0 50px 0;
   }
 
   .footerBottom span {
-    display: flex;
-    justify-content: center;
+    text-align: center;
     font-size: 0.8em;
-    font-weight: 500;
-    color: rgb(107, 107, 107);
-    max-width: 59vw;
+    max-width: 100vw;
+  }
+}
+
+/* >>>>>> RESPONSIVE DESIGN 1440px <<<<<<    */
+@media (min-width: 1440px) {
+   .footer {
+    padding: 350px 0 50px 0;
+    gap: 10vw;
+  }
+
+  .footer h1 {
+    padding: 0 0 20px 0;
+  }
+
+  .footerIntro {
+    max-width: 28vw;
+  }
+
+  .footerIntro p {
+    padding: 20px 0 20px 0;
+  }
+
+  .footerContext {
+    max-width: 100vw;
+    gap: 10vw;
+  }
+
+  .footerContext img {
+    padding: 0 0 20px 0;
+  }
+
+  .footerList ul li {
+    font-size: 0.9em;
+    max-width: 100vw;
+  }
+
+  .footerBottom {
+    padding: 30px 0 50px 0;
+  }
+
+  .footerBottom span {
+    text-align: center;
+    font-size: 0.8em;
+    max-width: 100vw;
   }
 }
