--- a/app/components/downloadApp.module.css
+++ b/app/components/downloadApp.module.css
@@ -9,6 +9,7 @@
     0 6px 20px 0 rgba(183, 182, 182, 0.224);
   position: absolute;
   bottom: 430px;
+  font-family: var(--font-space_grotesk);
 }
 
 .downloadAppContext {
@@ -18,7 +19,6 @@
 
 .downloadAppContext h1 {
   font-weight: 900;
-  font-family: var(--font-space_grotesk);
   line-height: normal;
   color: white;
   font-size: 3em;
@@ -27,7 +27,6 @@
 .downloadAppContext p {
   font-weight: 500;
   color: white;
-  font-family: var(--font-space_grotesk);
   font-size: 1em;
   max-width: 30vw;
   padding: 20px 0 0 0;
@@ -42,52 +41,31 @@
 }
 
 @media (max-width: 1023px) {
-
-.downloadImg{
-  display: none;
+  .downloadImg {
+    display: none;
+  }
 }
 
-.downloadApp {
-  margin: 0px 0px 0px 0px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  background-color: rgb(184, 30, 148);
-  border-radius: 10px;
-  box-shadow: 0 4px 8px 0 rgba(157, 155, 155, 0.401),
-    0 6px 20px 0 rgba(183, 182, 182, 0.224);
-  position: absolute;
-  bottom: 800px;
+/* >>>>>> RESPONSIVE DESIGN TO 373px SCREEN DOWN <<<<<<    */
+@media (max-width: 373px) {
 }
 
-.downloadAppContext {
-  padding: 80px 10px 10px 10px;
-  max-width: 100vw;
+/* >>>>>> RESPONSIVE DESIGN 374px GOING UP 425px <<<<<<    */
+@media (min-width: 374px) {
 }
 
-.downloadAppContext h1 {
-  font-weight: 900;
-  font-family: var(--font-space_grotesk);
-  line-height: normal;
-  color: white;
-  font-size: 2em;
+/* >>>>>> RESPONSIVE DESIGN 425px UP TO 768px <<<<<<    */
+@media (min-width: 425px) {
 }
 
-.downloadAppContext p {
-  font-weight: 500;
-  color: white;
-  font-family: var(--font-space_grotesk);
-  font-size: 1em;
-  max-width: 100vw;
-  padding: 20px 0 0 0;
+/* >>>>>> RESPONSIVE DESIGN 768px UP TO 1024px <<<<<<    */
+@media (min-width: 768px) {
 }
 
-.heroSocials {
-  display: flex;
-  gap: 10px;
-  width: fit-content;
-  margin: 0 0 0 0;
-  padding: 50px 0 50px 0;
+/* >>>>>> RESPONSIVE DESIGN 1024px UP TO 1440px <<<<<<    */
+@media (min-width: 1024px) {
 }
 
+/* >>>>>> RESPONSIVE DESIGN 1440px <<<<<<    */
+@media (min-width: 1440px) {
 }
