--- a/app/components/business.module.css
+++ b/app/components/business.module.css
@@ -2,11 +2,12 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  background-color: rgb(244,242,251);
+  background-color: rgb(244, 242, 251);
+  font-family: var(--font-space_grotesk);
 }
 
-.bg{
-    background-color: white;
+.bg {
+  background-color: white;
 }
 
 .businessContext {
@@ -16,7 +17,6 @@
 .intro {
   display: none;
   background-color: rgb(252, 251, 254);
-  font-family: var(--font-space_grotesk);
   font-weight: 500;
   color: #4b494b;
   border-radius: 20px;
@@ -24,36 +24,33 @@
 
 .introMobile {
   display: none;
-  background-color: rgb(252,251,254);
-  font-family: var(--font-space_grotesk);
+  background-color: rgb(252, 251, 254);
   font-weight: 500;
   color: #4b494b;
   border-radius: 20px;
 }
 
-.heading {
+.heading h1{
   font-weight: 900;
-  font-family: var(--font-space_grotesk);
   line-height: normal;
-  color: rgb(184,30,148);
+  color: rgb(184, 30, 148);
 }
 
 .businessContext p {
   font-weight: 500;
+  line-height: normal;
   color: #4b494b;
-  font-family: var(--font-space_grotesk);
 }
 
 .btn button {
-  background-color: rgb(184,30,148);
+  background-color: rgb(184, 30, 148);
   color: white;
-  font-family: var(--font-space_grotesk);
 }
 
 /* >>>>>> RESPONSIVE DESIGN TO 373px SCREEN DOWN <<<<<<    */
 @media (max-width: 373px) {
   .business {
-    padding: 40px 10px 100px 10px;
+    padding: 40px 10px 250px 10px;
     margin: 0 auto;
   }
 
@@ -77,15 +74,15 @@
     display: none;
   }
 
-  .heading {
+  .heading h1 {
     font-size: 1.6em;
-    padding: 20px 0 20px 0;
+    padding: 50px 0 20px 0;
   }
 
   .businessContext p {
     font-size: 0.9em;
     line-height: 2;
-    padding: 20px 0 20px 0;
+    padding: 30px 0 30px 0;
   }
 
   .btn {
@@ -97,17 +94,17 @@
     width: 90vw;
     border-radius: 30px;
     font-size: 1em;
-    background-color: rgb(139, 70, 123);
+     background-color: rgb(184, 30, 148);
   }
 }
 
 /* >>>>>> RESPONSIVE DESIGN 374px GOING UP 425px <<<<<<    */
 @media (min-width: 374px) {
   .business {
-    padding: 40px 10px 100px 10px;
+    padding: 40px 10px 250px 10px;
     margin: 0 auto;
   }
-  
+
   .businessContext {
     max-width: 100vw;
     display: grid;
@@ -148,7 +145,7 @@
     width: 90vw;
     border-radius: 30px;
     font-size: 1em;
-    background-color: rgb(139, 70, 123);
+     background-color: rgb(184, 30, 148);
   }
 }
 
@@ -199,7 +196,7 @@
     width: 90vw;
     border-radius: 30px;
     font-size: 1em;
-    background-color: rgb(139, 70, 123);
+     background-color: rgb(184, 30, 148);
   }
 }
 
@@ -250,7 +247,7 @@
     width: 50vw;
     border-radius: 30px;
     font-size: 1em;
-    background-color: rgb(139, 70, 123);
+     background-color: rgb(184, 30, 148);
   }
 }
 
@@ -301,7 +298,7 @@
     width: 50vw;
     border-radius: 30px;
     font-size: 1em;
-    background-color: rgb(139, 70, 123);
+     background-color: rgb(184, 30, 148);
   }
 }
 
@@ -341,16 +338,16 @@
   }
 
   .btn button {
-    background-color: rgb(184,30,148);
+    background-color: rgb(184, 30, 148);
     padding: 10px 0 10px 0;
     width: 14.5vw;
     margin: 5px 0 5px 0;
     border-radius: 30px;
     font-size: 1em;
   }
-  
-.btn button:hover {
-  background-color: rgb(139, 70, 123);
-  color: white;
-}
+
+  .btn button:hover {
+    background-color: rgb(139, 70, 123);
+    color: white;
+  }
 }
