--- a/app/components/footer.module.css
+++ b/app/components/footer.module.css
@@ -43,7 +43,7 @@
   display: flex;
   justify-content: center;
   font-weight: 500;
-  color: rgb(107, 107, 107);
+  color: rgb(115, 115, 115);
 }
 
 /* >>>>>> RESPONSIVE DESIGN TO 373px SCREEN DOWN <<<<<<    */
@@ -280,7 +280,7 @@
   }
 
   .footerIntro {
-    max-width: 28vw;
+    max-width: 20vw;
   }
 
   .footerIntro p {
@@ -306,8 +306,8 @@
   }
 
   .footerBottom span {
-    text-align: center;
+    text-align: start;
     font-size: 0.8em;
-    max-width: 100vw;
+    max-width: 51vw;
   }
 }
