--- a/app/components/footer.module.css
+++ b/app/components/footer.module.css
@@ -88,6 +88,7 @@
     text-align: center;
     font-size: 0.8em;
     max-width: 100vw;
+    padding: 0 5px 0 5px;
   }
 }
 
@@ -133,6 +134,7 @@
     text-align: center;
     font-size: 0.8em;
     max-width: 100vw;
+    padding: 0 30px 0 30px;
   }
 }
 
@@ -177,6 +179,7 @@
     text-align: center;
     font-size: 0.8em;
     max-width: 100vw;
+    padding: 0 60px 0 60px;
   }
 }
 
