--- a/app/components/services.module.css
+++ b/app/components/services.module.css
@@ -50,14 +50,18 @@
 
 /* >>>>>> RESPONSIVE DESIGN TO 373px SCREEN DOWN <<<<<<    */
 @media (max-width: 373px) {
+  .serviceIntro {
+    padding: 60px 0 30px 0;
+  }
+  
   .serviceIntro h1 {
-    font-size: 2.2em;
-    padding: 50px 0 10px 0;
+    font-size: 2.5em;
+    padding: 20px 20px 20px 20px;
   }
 
   .serviceIntro p {
-    font-size: 1em;
-    padding: 0 5px 0 5px;
+    font-size: 0.9em;
+    padding: 10px 10px 10px 10px;
   }
 
   .servicesList {
@@ -67,14 +71,20 @@
 
 /* >>>>>> RESPONSIVE DESIGN 374px GOING UP 425px <<<<<<    */
 @media (min-width: 374px) {
+  .serviceIntro {
+    padding: 60px 0 30px 0;
+  }
+
   .serviceIntro h1 {
-    font-size: 2.7em;
-    padding: 30px 0 10px 0;
+    font-size: 3em;
+    line-height: 0.9;
+    padding: 20px 20px 20px 20px;
   }
 
   .serviceIntro p {
-    font-size: 1.1em;
+    font-size: 1em;
     padding: 0 5px 0 5px;
+    padding: 20px 20px 20px 20px;
   }
 
   .servicesList {
@@ -90,12 +100,14 @@
 
   .serviceIntro h1 {
     font-size: 3.5em;
-    padding: 0 0 10px 0;
+    line-height: 0.9;
+    padding: 20px 20px 20px 20px;
   }
 
   .serviceIntro p {
     font-size: 1.1em;
     width: 95vw;
+    padding: 20px 20px 20px 20px;
   }
 
   .servicesList {
@@ -110,7 +122,7 @@
   }
 
   .serviceIntro h1 {
-    font-size: 3.5em;
+    font-size: 4em;
     padding: 0 0 10px 0;
   }
 
