--- a/app/components/footer.module.css
+++ b/app/components/footer.module.css
@@ -37,11 +37,12 @@
 
 .footerBottom {
   background-color: white;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .footerBottom span {
-  display: flex;
-  justify-content: center;
   font-weight: 500;
   color: rgb(115, 115, 115);
 }
@@ -88,7 +89,7 @@
     text-align: center;
     font-size: 0.8em;
     max-width: 100vw;
-    padding: 0 5px 0 5px;
+    padding: 0 6px 0 6px;
   }
 }
 
@@ -134,7 +135,7 @@
     text-align: center;
     font-size: 0.8em;
     max-width: 100vw;
-    padding: 0 50px 0 50px;
+    padding: 0px 20px 0px 20px;
   }
 }
 
@@ -179,7 +180,6 @@
     text-align: center;
     font-size: 0.8em;
     max-width: 100vw;
-    padding: 0 60px 0 60px;
   }
 }
 
@@ -223,13 +223,13 @@
   .footerBottom span {
     text-align: center;
     font-size: 0.8em;
-    max-width: 100vw;
+    max-width: 80vw;
   }
 }
 
 /* >>>>>> RESPONSIVE DESIGN 1024px UP TO 1440px <<<<<<    */
 @media (min-width: 1024px) {
-   .footer {
+  .footer {
     padding: 300px 20px 50px 20px;
     gap: 10vw;
   }
@@ -273,7 +273,7 @@
 
 /* >>>>>> RESPONSIVE DESIGN 1440px <<<<<<    */
 @media (min-width: 1440px) {
-   .footer {
+  .footer {
     padding: 350px 0 50px 0;
     gap: 10vw;
   }
@@ -309,8 +309,6 @@
   }
 
   .footerBottom span {
-    text-align: start;
     font-size: 0.8em;
-    max-width: 51vw;
   }
 }
